################################################################################
# Spectral Python (SPy) package change log
################################################################################

2013-03-06	tboggs <tboggs@users.sourceforge.net>

    Added RX anomaly detector. Now importing `detectors` submodule into
    top-level namespace.

    * __init__.py: import algorithms.detectors into top-level namespace.
    * algorithms/__init__.py: Do not import MatchedFilter.
    * algorithms/detectors.py: Applied autopep8
      (RX): New class.
    
2013-03-05	tboggs <tboggs@users.sourceforge.net>

    Ran autopep8 on envi.py and fixed two incorrect exception statements.
    
    * io/envi.py: Fixed whitespace and code formatting via autopep8
      (check_new_filename): Add missing arguments to exception statements.

    Added a new function `calc_stats` that returns a `GaussianStats` object.
    Modified principal components, linear transforms, and matched filter to
    use the stats object instead of passing separate means & covariances.

    * algorithms/__init__.py: Import calc_stats.
    * algorithms/algorithms:
      (PrincipalComponents.__init__): Accept a `GaussianStats` object insted
        of separate mean & covariance.
      (PrincipalComponents.reduce): Use stats object.
      (principal_components): Use stats object.
      (GaussianStats.__init__): Accept parameters.
      (GaussianStats.transform): New method.
      (GaussianStats.get_whitening_transform): New method
      (calc_stats): New function.
      (TrainingClass.__init__): Use stats object.
    * algorithms/detectors.py:
      (MatchedFilter.__init__): Use stats object.
    * algorithms/transforms.py:
      (LinearTransform.__call__): Apply to any object with a `transform`
        method.

    Fixed several bugs introduced when migrating to numpy dtypes that caused
    improper file read operations only when memmap is not used.
    